- Stricter SSL: Hard-code the ciphersuites and trusted root
  certificates (instead of using the system defaults).
- Add DbxOAuth1Upgrader, which upgrades existing OAuth 1 access tokens
  to OAuth 2 access tokens.

---------------------------------------------
1.7.5 (2013-09-16)

- Fix crash in getRevisions.

---------------------------------------------
1.7.4 (2013-09-13)

- Fix crash in getAccountInfo, caused by new quota field "datastores".
- Fix file uploading by setting Content-Type explicitly.

---------------------------------------------
1.7.3 (2013-09-05)

- Fix copy/move for folders.
- Fix getMetadataWithChildren for when the file/folder doesn't exist.

---------------------------------------------
1.7.2 (2013-08-22)

- Get thumbnails working (they were completely broken).

---------------------------------------------
1.7.1 (2013-08-21)

- Get chunked uploads working (they were almost completely broken).

---------------------------------------------
1.7 (2013-07-31)

- Added support for most API calls.
- A few minor backwards-incompatibilities.

---------------------------------------------
1.6 (2013-07-07)

- Completely rewritten SDK, focused on web apps (no Android support).
- Many API calls not yet implemented.
- Not backwards compatible with previous versions.