@@ -2,6 +2,7 @@
   certificates (instead of using the system defaults).
 - Add DbxOAuth1Upgrader, which upgrades existing OAuth 1 access tokens
   to OAuth 2 access tokens.
+- Add support for /delta's new "path_prefix" parameter.
 
 ---------------------------------------------
 1.7.5 (2013-09-16)
